This changelog documents the evolution of org-re-reveal starting with
version [[*\[1.1.11\] - 2019-08-19][1.1.11]], created on 2019-08-19,
based on [[https://keepachangelog.com/en/1.0.0/][Keep a Changelog]].
Version numbers starting with version 2.0.0 adhere to
[[https://semver.org/spec/v2.0.0.html][Semantic Versioning]].

Older changes are summarized in subsequent sections.

** [Unreleased]
** [3.36.0] - 2025-06-08
*** Added
   - Honor ~org-export-timestamp-file~: If t, create comment in header
     with timestamp that documents creation time

** [3.35.0] - 2025-03-22
*** Added
    - Customizable variable ~org-re-reveal-browse-to-id~
      - With the default value ~t~, if section at point has a
        ~CUSTOM_ID~, browse to its slide after export with
        ~org-re-reveal-export-to-html-and-browse~.
      - Set to ~nil~ if you do not like this.

** [3.34.2] - 2025-02-20
*** Fixed
    - Fix compat check of 3.34.1

** [3.34.1] - 2025-02-20
*** Fixed
    - Avoid byte compiler warning

** [3.34.0] - 2025-02-19
*** Added
    - Customizable variable ~org-re-reveal-klipse-js-init~ (with
      keyword), now with ~defer~ attribute on klipse script element.

** [3.33.0] - 2024-08-31
*** Added
    - Customizable variable ~org-re-reveal-log~ to create log file of
      published presentations

** [3.32.0] - 2024-08-08
*** Added
    - Support %s escape sequences, to be replaced with the reveal.js
      root path, in ~org-re-reveal-extra-scripts~ and
      ~org-re-reveal-extra-css~.  Addresses oer-reveal issue [[https://gitlab.com/oer/oer-reveal/-/issues/6][#6]].

** [3.31.0] - 2024-08-07
*** Added
    - Support footnotes, new customizable variable
      ~org-re-reveal-footnotes-div~.  Addresses issue #99.
      - [[file:test-cases/test-footnotes.org][Test case for slide collecting all footnotes]].
      - [[file:test-cases/test-footnotes-local.org][Test case for footnotes on same slide]].

** [3.30.0] - 2024-08-05
*** Added